--- a/Lib/Neon.Kube/Resources/Helm/citus-postgresql/templates/service.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/citus-postgresql/templates/service.yaml
@@ -18,6 +18,9 @@ spec:
     targetPort: {{ .Values.superuser.port }}
     protocol: TCP
     name: psql
+  - name: http-metrics
+    port: {{ .Values.metrics.port }}
+    targetPort: http-metrics
   selector:
     app: {{ template "citus-postgresql.name" . }}-master
     release: {{ .Release.Name }}
