--- a/Lib/Neon.Kube/Resources/Helm/citus-postgresql/templates/configmap-metric-exporter.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/citus-postgresql/templates/configmap-metric-exporter.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.prometheus.enabled }}
+{{- if .Values.metrics.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,5 +9,5 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
-  queries.yaml: {{ .Values.prometheus.queries | quote | indent 2 }}
+  queries.yaml: {{ .Values.metrics.queries | quote | indent 2 }}
 {{- end }}
