--- a/Lib/Neon.Kube/Resources/Helm/redis-ha/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/redis-ha/values.yaml
@@ -100,7 +100,7 @@ haproxy:
   ## Ref: https://github.com/haproxy/haproxy/tree/master/contrib/prometheus-exporter
   ##
   metrics:
-    enabled: false
+    enabled: true
     # prometheus port & scrape path
     port: 9101
     portName: http-exporter-port
@@ -108,7 +108,7 @@ haproxy:
 
     serviceMonitor:
       # When set true then use a ServiceMonitor to configure scraping
-      enabled: false
+      enabled: true
       # Set the namespace the ServiceMonitor should be deployed
       # namespace: monitoring
       # Set how frequently Prometheus should scrape
@@ -356,7 +356,7 @@ affinity: |
 
 # Prometheus exporter specific configuration options
 exporter:
-  enabled: false
+  enabled: true
   image: oliver006/redis_exporter
   tag: v1.13.1
   pullPolicy: IfNotPresent
@@ -406,7 +406,7 @@ exporter:
 
   serviceMonitor:
     # When set true then use a ServiceMonitor to configure scraping
-    enabled: false
+    enabled: true
     # Set the namespace the ServiceMonitor should be deployed
     # namespace: monitoring
     # Set how frequently Prometheus should scrape
