add tolerations and nodeselectors

--- a/Lib/Neon.Kube/Resources/Helm/cortex/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/cortex/values.yaml
@@ -127,6 +127,9 @@ tolerations:
   - key: "neonkube.io/metrics"
     operator: Exists
     effect: NoSchedule
+  - key: "neonkube.io/metrics-internal"
+    operator: Exists
+    effect: NoSchedule
 
 resources: {}
 
