--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: grafana-agent-operator
   annotations:
-    reloader.stakater.com/auto: true
+    reloader.stakater.com/auto: 'true'
 spec:
   replicas: 1
   selector:
@@ -18,6 +18,8 @@ spec:
         app: grafana-agent-operator
     spec:
       serviceAccountName: grafana-agent-operator
+      nodeSelector:
+      {{- toYaml .Values.nodeSelector | nindent 8 }}
       containers:
       - name: operator
         image: "{{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
