--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
@@ -45,6 +45,9 @@ spec:
         port: 3001
         nodePort: 30001
         targetPort: grafana-http
+  deployment:
+    nodeSelector:
+      {{- toYaml .Values.nodeSelector | nindent 8 }}
   dashboardLabelSelector:
     - matchExpressions:
         - { key: app, operator: In, values: [ grafana ] }
