--- a/Lib/Neon.Kube/Resources/Helm/reloader/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/reloader/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
       priorityClassName: {{ .Values.reloader.deployment.priorityClassName }}
       {{- end }}
       containers:
-      - image: "{{ .Values.reloader.deployment.image.name }}/{{ .Values.reloader.deployment.image.name }}:{{ .Values.reloader.deployment.image.tag }}"
+      - image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.reloader.deployment.image.pullPolicy }}
         name: {{ template "reloader-fullname" . }}
       {{- if or (.Values.reloader.deployment.env.open) (.Values.reloader.deployment.env.secret) (.Values.reloader.deployment.env.field) (eq .Values.reloader.watchGlobally false) }}
