--- a/Lib/Neon.Kube/Resources/Helm/reloader/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/reloader/values.yaml
@@ -5,6 +5,12 @@ global:
   ##
   imagePullSecrets: []
 
+image:
+  organization: neon-registry.node.local
+  repository: stakater-reloader
+  tag: v0.0.95
+  pullPolicy: IfNotPresent
+
 nameOverride: reloader
 fullnameOverride: reloader
 
