--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/daemonset.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana-agent-node
   namespace: neon-monitor
   annotations:
-    reloader.stakater.com/auto: true
+    reloader.stakater.com/auto: 'true'
 spec:
   minReadySeconds: 10
   selector:
