--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -217,7 +217,8 @@ autoscaling:
 #     ]
 #   }
 # ]`
-nodeSelector: {}
+nodeSelector:
+  neonkube.io/neon-system.registry: 'true'
 
 # tolerations -- Expects input structure as per specification <https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#toleration-v1-core>
 # For example:
