--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -15,7 +15,8 @@ operator:
     runAsGroup: 1000
     runAsNonRoot: true
     fsGroup: 1000
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.metrics-internal: 'true'
   affinity: {}
   tolerations: []
   resources:
@@ -32,7 +33,8 @@ console:
     pullPolicy: IfNotPresent
   imagePullSecrets: []
   replicaCount: 1
-  nodeSelector: {}
+  nodeSelector:
+    neonkube.io/monitor.metrics-internal: 'true'
   affinity: {}
   tolerations: []
   resources: {}
@@ -80,7 +82,8 @@ tenants:
         ## eligible to run on a node, the node must have each of the
         ## indicated key-value pairs as labels.
         ## Read more here: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
-        nodeSelector: {}
+        nodeSelector:
+          neonkube.io/monitor.metrics-internal: 'true'
         ## Affinity settings for MinIO pods. Read more about affinity
         ## here: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity.
         affinity: {}
