--- a/Lib/Neon.Kube/Resources/Helm/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/redis-ha/templates/redis-ha-statefulset.yaml
@@ -351,7 +351,7 @@ spec:
 {{ toYaml .Values.sentinel.lifecycle | indent 10 }}
 {{- if .Values.exporter.enabled }}
       - name: redis-exporter
-        image: "{{ .Values.exporter.image }}:{{ .Values.exporter.tag }}"
+        image: "{{ .Values.exporter.image.organization }}/{{ .Values.exporter.image.repository }}:{{ .Values.exporter.image.tag }}"
         imagePullPolicy: {{ .Values.exporter.pullPolicy }}
         args:
         {{- range $key, $value := .Values.exporter.extraArgs }}
