--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -156,7 +156,8 @@ volumes: []
 volumeMounts: []
 
 # deploymentAnnotations -- Additional annotations to add to the controller Deployment
-deploymentAnnotations: {}
+deploymentAnnotations:
+    secret.reloader.stakater.com/reload: "webhook-server-cert"
 
 # podAnnotations -- Additional annotations to add to the controller Pods
 podAnnotations: {}
