--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
@@ -1,7 +1,7 @@
 apiVersion: integreatly.org/v1alpha1
 kind: Grafana
 metadata:
-  name: example-grafana
+  name: grafana
 spec:
   ingress:
     enabled: False
