--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               fieldPath: metadata.namespace
         - name: CONFIGURATION_FROM
           value: env,file:/etc/harbor-operator/config.yaml
-        image: ghcr.io/goharbor/harbor-operator:dev_master
+        image: ghcr.io/neonkube-dev/goharbor-harbor-operator:release
         livenessProbe:
           httpGet:
             path: /healthz
