more setup tweaks

--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
@@ -30,7 +30,8 @@ spec:
         regionendpoint: minio.neon-system
         accesskey: {{ .Values.storage.s3.accessKey }}
         secretkeyRef: {{ .Values.storage.s3.secretKeyRef }}
-
+        secure: false
+        skipverify: true
   cache:
     kind: Redis
     spec:
