--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -49,7 +49,7 @@ console:
 ## MinIO Tenant Definition
 tenants:
   # Tenant name
-  - name: minio
+  - name: neon-system
     ## Registry location and Tag to download MinIO Server image
     image:
       organization: neon-registry.node.local
