--- a/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
+++ b/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
@@ -70,7 +70,8 @@
 
   <ItemGroup>
     <PackageReference Include="KubernetesClient" Version="4.0.16" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
     <PackageReference Include="YamlDotNet" Version="11.1.1" />
   </ItemGroup>
 
