--- a/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
+++ b/Lib/Neon.Xunit.Temporal/Neon.Xunit.Temporal.csproj
@@ -75,6 +75,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Neon.Temporal\Neon.Temporal.csproj" />
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\Neon.Xunit\Neon.Xunit.csproj" />
