--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/operator.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/operator.yaml
@@ -29,6 +29,8 @@ spec:
           args:
             - --grafana-image={{ .Values.image.organization }}/{{ .Values.image.repository }}
             - --grafana-image-tag={{ .Values.image.tag }}
+            - --grafana-plugins-init-container-image={{ .Values.pluginsInit.image.organization }}/{{ .Values.pluginsInit.image.repository }}
+            - --grafana-plugins-init-container-tag={{ .Values.pluginsInit.image.tag }}
             - --scan-all
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
           env:
