--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               fieldPath: metadata.namespace
         - name: CONFIGURATION_FROM
           value: env,file:/etc/harbor-operator/config.yaml
-        image: ghcr.io/neonkube-dev/goharbor-harbor-operator:release
+        image: neon-registry.node.local/goharbor-harbor-operator:v1.0.1
         livenessProbe:
           httpGet:
             path: /healthz
