--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
@@ -1,119 +1,100 @@
-﻿apiVersion: goharbor.io/v1beta1
+﻿apiVersion: goharbor.io/v1alpha3
 kind: HarborCluster
 metadata:
   name: registry
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  version: 2.3.0
-  imageSource: # Optional
-    repository: neon-registry.node.local # Required
-    imagePullPolicy: IfNotPresent # Optional, default = IfNotPresent
-    imagePullSecrets: []
-  logLevel: debug
-  database:
-    kind: PostgreSQL
-    spec:
-      postgresql:
-        hosts:
-          - host: db-citus-postgresql.neon-system
-            port: 5432
-        passwordRef: registry
-        sslMode: disable
-        username: neon_service
-        prefix: harbor_
-  storage:
-    kind: S3
-    spec:
-      s3:
-        region: neon
-        bucket: harbor
-        regionendpoint: minio.neon-system
-        accesskey: {{ .Values.storage.s3.accessKey }}
-        secretkeyRef: {{ .Values.storage.s3.secretKeyRef }}
-        secure: false
-        skipverify: true
-  cache:
-    kind: Redis
-    spec:
-      redis:
-        host: registry-redis
-        port: 26379
-        sentinelMasterSet: master
-  expose: 
-    core: # Required
-      # TLS setting
-      # Expose service with ingress way
-      ingress:
-        # Host of the exposed service
-        host: registry.{{ .Values.clusterDomain }} # Required
-        # Ingress controller type, support ["gce","ncp","default"]
-        controller: default # Optional, default value = "default"
-        # Annotations applied to the ingress
-        annotations: # Optional
-          key: value
-    notary: # Required
-      # TLS setting
-      ingress:
-        # Host of the exposed service
-        host: notary.{{ .Values.clusterDomain }} # Required
-        # Ingress controller type, support ["gce","ncp","default"]
-        controller: default # Optional, default value = "default"
-        # Annotations applied to the ingress
-        annotations: # Optional
-          key: value
-      tls: # Optional
-        # Certificate reference\
-        certificateRef: {{ .Values.clusterDomain }} # Optional
-  externalURL: https://registry.{{ .Values.clusterDomain }}
-  harborAdminPasswordRef: registry
-  internalTLS:
-    enabled: false
+  version: {{ .Values.harbor.version }}
   chartmuseum:
-    image: neon-registry.node.local/harbor-chartmuseum-photon:v2.3.0
+    absoluteUrl: false
+    image: {{ .Values.image.organization }}/harbor-chartmuseum-photon:v{{ .Values.harbor.version }}
     nodeSelector:
-    {{- toYaml .Values.nodeSelector | nindent 6 }}
+      neonkube.io/neon-system.registry: 'true'
+    resources: {}
   core:
-    image: neon-registry.node.local/harbor-core:v2.3.0
+    image: {{ .Values.image.organization }}/harbor-core:v{{ .Values.harbor.version }}
+    resources: {}
     tokenIssuer:
       kind: Issuer
       name: neon-system-selfsigned-issuer
-  #exporter:
-  #  image: neon-registry.node.local/harbor-exporter:v2.3.0
-  #  nodeSelector:
-  #  {{- toYaml .Values.nodeSelector | nindent 6 }}
+  database:
+    hosts:
+      - host: db-citus-postgresql.neon-system
+        port: 5432
+    passwordRef: registry
+    prefix: harbor_
+    sslMode: disable
+    username: neon_service
+  expose:
+    core:
+      ingress:
+        host: registry.{{ .Values.clusterDomain }}
+      tls:
+        certificateRef: {{ .Values.clusterDomain }}
+    notary:
+      ingress:
+        host: notary.{{ .Values.clusterDomain }}
+      tls:
+        certificateRef: {{ .Values.clusterDomain }}
+  externalURL: https://registry.{{ .Values.clusterDomain }}
+  harborAdminPasswordRef: registry
+  imageChartStorage:
+    redirect:
+      disable: true
+    s3:
+      accesskey: {{ .Values.storage.s3.accessKey }}
+      bucket: harbor
+      encrypt: false
+      region: neon
+      regionendpoint: minio.neon-system
+      secretkeyRef: {{ .Values.storage.s3.secretKeyRef }}
+      secure: false
+      skipverify: true
+      storageclass: STANDARD
+      v4auth: true
+  imageSource:
+    imagePullPolicy: {{ .Values.image.pullPolicy }}
+    repository: {{ .Values.image.organization }}
+  internalTLS:
+    enabled: false
   jobservice:
-    image: neon-registry.node.local/harbor-jobservice:v2.3.0
+    image: {{ .Values.image.organization }}/harbor-jobservice:v{{ .Values.harbor.version }}
     nodeSelector:
     {{- toYaml .Values.nodeSelector | nindent 6 }}
+    resources: {}
+    workerCount: 10
+  logLevel: debug
   notary:
+    migrationEnabled: true
     server:
-      image: neon-registry.node.local/harbor-notary-server-photon:v2.3.0
+      image: {{ .Values.image.organization }}/harbor-notary-server-photon:v{{ .Values.harbor.version }}
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
     signer:
-      image: neon-registry.node.local/harbor-notary-signer-photon:v2.3.0
+      image: {{ .Values.image.organization }}/harbor-notary-signer-photon:v{{ .Values.harbor.version }}
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
-    migrationEnabled: true
   portal:
-    image: neon-registry.node.local/harbor-portal:v2.3.0
-    nodeSelector:
-    {{- toYaml .Values.nodeSelector | nindent 6 }}
+    resources: {}
+  redis:
+    host: registry-redis
+    port: 26379
+    sentinelMasterSet: master
   registry:
-    image: neon-registry.node.local/harbor-registry-photon:v2.3.0
+    image: {{ .Values.image.organization }}/harbor-registry-photon:v{{ .Values.harbor.version }}
     nodeSelector:
     {{- toYaml .Values.nodeSelector | nindent 6 }}
-  registryctl:
-    image: neon-registry.node.local/harbor-registryctl:v2.3.0
-    nodeSelector:
-    {{- toYaml .Values.nodeSelector | nindent 6 }}
+    relativeURLs: true
+    resources: {}
+    metrics:
+      enabled: true
   trivy:
-    image: neon-registry.node.local/harbor-trivy-adapter-photon:v2.3.0
+    image: {{ .Values.image.organization }}/harbor-trivy-adapter-photon:v{{ .Values.harbor.version }}
     nodeSelector:
     {{- toYaml .Values.nodeSelector | nindent 6 }}
+    resources: {}
     skipUpdate: false
     storage:
       cachePersistentVolume:
         claimName: registry-trivy-cache
-      reportsPersistentVolume:
-        claimName: registry-trivy-reports
+  updateStrategyType: RollingUpdate
