--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -1,6 +1,6 @@
 image:
+  organization: neon-registry.node.local
   # image.repository -- The image repository whose default is the chart appVersion.
-  repository: ghcr.io/goharbor/harbor-operator
   # image.pullPolicy -- The image pull policy for the controller.
   pullPolicy: IfNotPresent
   # image.tag -- The image tag whose default is the chart appVersion.
@@ -11,6 +11,9 @@ installCRDs: false
 
 nameOverride: ""
 fullnameOverride: "registry"
+
+harbor:
+  version: 2.2.2
 
 # imagePullSecrets -- Reference to one or more secrets to be used when pulling images
 # <https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/>
