give cluster-operator the ability to exec pods

--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/cluster-role-template.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/cluster-role-template.yaml
@@ -18,6 +18,13 @@ rules:
     - namespaces
     - services
     - pods
+    - pods/exec
+    - pods/log
+    - pods/attach
+    - pods/binding
+    - pods/eviction
+    - pods/proxy
+    - pods/status
     - deployments
     - deployments/finalizers
     - replicationcontrollers
