--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
@@ -28,8 +28,8 @@ spec:
   duration: 2160h0m0s
   issuerRef:
     group: cert-manager.io
-    kind: ClusterIssuer
-    name: neon-acme
+    kind: Issuer
+    name: neon-acme-neon-system
   keyAlgorithm: rsa
   keyEncoding: pkcs1
   keySize: 2048
@@ -58,6 +58,8 @@ spec:
     - "*.{{ .Values.clusterDomain }}"
   duration: 2160h0m0s
   issuerRef:
+    group: cert-manager.io
+    kind: Issuer
     name: registry-harbor-harbor-notarysigner-authentication
   keyAlgorithm: ecdsa
   privateKey: {}
